Fixed font size issues on mobile.

--- a/css/about.css
+++ b/css/about.css
@@ -22,7 +22,7 @@
     font-family: poppins;
     color: black;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .square_spacer {
