--- a/css/projects.css
+++ b/css/projects.css
@@ -22,7 +22,7 @@
     font-family: poppins;
     color: black;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .square_spacer {
@@ -64,6 +64,7 @@ li {
 }
 
 .notice {
+    font-size: 1.25rem;
     font-family: poppins;
 }
 
@@ -96,12 +97,13 @@ a:hover {
 
 .project_name {
     font-family: poppins;
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
     margin: 0 0 -.5em 0;
 }
 
 .project_description {
+    font-size: 1.5rem;
     font-family: poppins;
     text-align: center;
 }
