--- a/css/work.css
+++ b/css/work.css
@@ -7,8 +7,8 @@
 }
 
 .logo {
-    width: 7.5em;
-    height: 7.5em;
+    width: 10em;
+    height: 10em;
 }
 
 .homepage_nav {
@@ -22,7 +22,7 @@
     font-family: poppins;
     color: black;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .square_spacer {
@@ -63,6 +63,7 @@ li {
 }
 
 .notice {
+    font-size: 1.25rem;
     font-family: poppins;
 }
 
@@ -88,19 +89,20 @@ a:hover {
 }
 
 .company_logo {
-    width: 25em;
-    height: 25em;
+    width: 30em;
+    height: 30em;
     border: 1px solid black;
 }
 
 .company_name {
     font-family: poppins;
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
     margin: 0 0 -.5em 0;
 }
 
 .job_title {
+    font-size: 1.5rem;
     font-family: poppins;
     text-align: center;
 }
